[tool.poetry]
name = "polytope-oracles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.2"
networkx = "^2.6.3"
polytope = "^0.2.3"
cvxopt = "^1.2.7"
annoy = { version = "^1.17.0", optional = true }
types-annoy = { version = "^1.17.3", optional = true }
pandas = { version = "1.3.4", optional = true }
plotly = { version = "5.3.1", optional = true}
kaleido = { version = "0.2.1", optional = true }
jupyterlab = { version = "3.2.2", optional = true }
n2 = "0.1.7"
hnswlib = { version = "0.5.2", optional = true }

[tool.poetry.extras]
annoy = ["annoy", "types-annoy"]
hnswlib = ["hnswlib"]
experiments = ["pandas", "plotly", "kaleido", "jupyterlab"]
test = ["annoy", "types-annoy", "hnswlib"]

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
